continue on error on failed job

--- a/.github/workflows/call-make.yml
+++ b/.github/workflows/call-make.yml
@@ -57,6 +57,7 @@ jobs:
 
             - name: 🔝 Move coverage file
               if: ${{ inputs.create-coverage }}
+              continue-on-error: true
               run: >
                   mv -v TestResults/*/* TestResults
 
